Switch charts to Chart.js and stabilize chart sizing

--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
               <p class="title">Vout vs Switching Frequency</p>
               <p class="sub">Log-frequency sweep</p>
             </div>
-            <canvas id="chartFreq" width="900" height="260"></canvas>
+            <div class="chart-plot">
+              <canvas id="chartFreq" width="900" height="260"></canvas>
+            </div>
           </article>
 
           <article class="chart-card">
@@ -211,7 +213,9 @@
               <p class="title">Vout vs Position Fraction</p>
               <p class="sub">Centered sweep (p = 0.1 to 0.9)</p>
             </div>
-            <canvas id="chartPos" width="900" height="260"></canvas>
+            <div class="chart-plot">
+              <canvas id="chartPos" width="900" height="260"></canvas>
+            </div>
           </article>
 
           <article class="chart-card">
@@ -219,7 +223,9 @@
               <p class="title">Vout vs Total Separation G</p>
               <p class="sub">Gap sweep at fixed frequency and position</p>
             </div>
-            <canvas id="chartGap" width="900" height="260"></canvas>
+            <div class="chart-plot">
+              <canvas id="chartGap" width="900" height="260"></canvas>
+            </div>
           </article>
 
           <article class="chart-card">
@@ -227,7 +233,9 @@
               <p class="title">Sensor Node Voltages Over One Clock Cycle</p>
               <p class="sub">Time-domain Va and Vb from R10/R11/Ca/Cb/Cc with ±V drive</p>
             </div>
-            <canvas id="chartSensorCycle" width="900" height="260"></canvas>
+            <div class="chart-plot">
+              <canvas id="chartSensorCycle" width="900" height="260"></canvas>
+            </div>
           </article>
 
           <article class="chart-card">
@@ -235,7 +243,9 @@
               <p class="title">Solver Iteration Trace</p>
               <p class="sub">Operating-point fixed-point iterations (V3 and Vout)</p>
             </div>
-            <canvas id="chartSolverTrace" width="900" height="260"></canvas>
+            <div class="chart-plot">
+              <canvas id="chartSolverTrace" width="900" height="260"></canvas>
+            </div>
           </article>
 
           <article class="chart-card">
@@ -249,7 +259,9 @@
                 </select>
               </div>
             </div>
-            <canvas id="chartSolverResidual" width="900" height="260"></canvas>
+            <div class="chart-plot">
+              <canvas id="chartSolverResidual" width="900" height="260"></canvas>
+            </div>
           </article>
         </section>
 
